fix: missing text alignment on token card header

--- a/src/components/token-card/token-card.scss
+++ b/src/components/token-card/token-card.scss
@@ -30,6 +30,7 @@
     justify-content: space-between;
     padding: 0 10px;
     padding-top: 3px;
+    text-align: center;
   }
 
   &-content {
